Major sound fix, was doubling signals (+= to self). Main problem now: in musical mode there is constant clipping because the same signal is being added to itself many times if pixel width > 1.

--- a/app/assets/stylesheets/jams.css.scss
+++ b/app/assets/stylesheets/jams.css.scss
@@ -275,3 +275,13 @@ nav {
   width:200px;
   margin-left:0.5em;
 }
+
+.top_align
+{
+  vertical-align: top;
+}
+
+#tool_controls
+{
+  width:400px;
+}
